# customer-jira-tracker-mcp

./: .gitignore  Dockerfile  Dockerfile.local  Dockerfile.mcp  Dockerfile.mcp.simple  Dockerfile.server  LICENSE  README.md  USAGE_GUIDE.md  global_index_manager.py  jira_mcp_client.py  local_http_server.py  mcp_server.py  mcp_server_simple.py  pyproject.toml  requirements.txt  run_local.sh  setup_mcp.sh  test_mcp.py  test_mcp_manual.py  test_minimal_mcp.py
openshift/: BUILD_INSTRUCTIONS.md  README.md  deploy.sh  deployment.yaml  http_server.py  main.py  pvc.yaml  route.yaml  secret.yaml  service.yaml
